Fix vertical alignment of "no children" icon
This change alters the CSS to properly vertically center the plus sign
icon that appears when a menu item has no children. Currently this icon
is aligned to the top, which feels wrong and is inconsistent with how
this icon appears in the Wagtail page browser.

--- a/treemodeladmin/static/treemodeladmin/css/index.css
+++ b/treemodeladmin/static/treemodeladmin/css/index.css
@@ -24,6 +24,6 @@ header .button.bicolor {
     padding-right: 0;
 }
 
-.listing td.children {
+.listing td.children, .listing td.no-children {
     vertical-align: middle;
 }
